--- a/sass/layouts/_mobile-menu.scss
+++ b/sass/layouts/_mobile-menu.scss
@@ -1,6 +1,10 @@
 .mobile-menu-btn {
   @media screen and (max-width: 767.98px) {
-    position: relative;
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    right: 23px;
+    top: 22px;
     z-index: 556;
     width: 40px;
     height: 40px;
@@ -24,6 +28,7 @@
   width: 100%;
   height: 100vh;
   z-index: 555;
+  overflow: scroll;
   background: var(--main-color);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -35,9 +40,14 @@
     display: none;
   }
 }
+.mobile-menu-container {
+  padding-left: 0;
+  @media screen and (min-width: 480px) {
+    margin-left: 40px;
+  }
+}
 .mobile-menu-nav {
   margin-top: 48px;
-  margin-left: 40px;
   margin-bottom: 302px;
 }
 .mobile-menu-nav__item:not(:last-child) {
@@ -51,11 +61,13 @@
   text-align: center;
   letter-spacing: 0.02em;
   color: #212121;
+  &--current {
+    color: var(--accent-color);
+  }
 }
 .mobile-menu-contact {
   position: absolute;
   bottom: 134px;
-  margin-left: 40px;
 }
 .mobile-menu-contact__item:not(:last-child) {
   margin-bottom: 32px;
@@ -88,20 +100,21 @@
 }
 .mobile-menu-social {
   display: flex;
-  //   margin-left: 40px;
   position: absolute;
-  bottom: 48px;
-  margin-left: 40px;
+  bottom: 55px;
 }
 .mobile-menu-social__item:not(:last-child) {
   margin-right: 10px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 .mobile-menu-social__link {
-  padding-right: 10px;
+  padding-right: 5px;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+  @media screen and (min-width: 480px) {
+    padding-right: 10px;
+  }
 }
