--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -22,7 +22,6 @@
 
   &__item:not(:last-child) {
     margin-right: 8px;
-    margin-bottom: 15px;
   }
 }
 .portfolio-filter__btn {
@@ -47,6 +46,12 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
     transition: box-shadow 250ms var(--timing-function);
   }
+}
+.btn--accent {
+  background-color: var(--accent-color);
+  color: var(--main-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-grid {
   display: flex;
@@ -94,7 +99,7 @@
   left: 0;
   height: 100%;
   opacity: 0;
-  padding: 63px 24px;
+  padding: 15px 24px;
   font-size: 18px;
   line-height: 1.55;
   color: var(--main-color);
@@ -105,6 +110,17 @@
   transition-property: transform, opacity;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
+  @media screen and (min-width: 480px) {
+    padding-top: 74px;
+    padding-bottom: 74px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
 }
 .portfolio-grid-bottom {
   text-align: left;
