--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -19,6 +19,8 @@
   left: 50%;
   opacity: 1;
   width: 450px;
+  padding-left: 40px;
+  padding-right: 40px;
   transform: translate(-50%, -50%) scale(1);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -59,6 +61,7 @@
   }
 }
 .modal__lable {
+  font-weight: bold;
   margin-top: 40px;
   margin-bottom: 12px;
   font-size: 20px;
@@ -76,8 +79,8 @@
   width: 370px;
   margin-left: auto;
   margin-right: auto;
-  @media screen and (max-width: 480px) {
-    width: calc(100% - 40px);
+  @media screen and (max-width: 479px) {
+    width: 100%;
   }
   @media screen and (min-width: 1200px) {
     width: 448px;
@@ -89,6 +92,9 @@
   margin-bottom: 10px;
   position: relative;
   color: var(--dark-color);
+  &--margin-bottom {
+    margin-bottom: 0;
+  }
 }
 .form-field__label {
   margin-bottom: 4px;
@@ -148,6 +154,7 @@
   cursor: pointer;
   height: 120px;
   padding: 12px 16px;
+  margin-bottom: 20px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   font-size: 14px;
@@ -173,7 +180,6 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--font-color-dark);
-  margin-top: 20px;
   margin-bottom: 30px;
   @media screen and (max-width: 480px) {
     flex-wrap: wrap;
