--- a/sass/layouts/_page-header.scss
+++ b/sass/layouts/_page-header.scss
@@ -62,7 +62,9 @@
   &:focus {
     color: var(--accent-color);
   }
-
+  &--current {
+    color: var(--accent-color);
+  }
   &--current::after {
     content: "";
     position: absolute;
