--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,12 @@ body {
   margin-right: 8px;
 }
 
+@media screen and (max-width: 767.98px) {
+  .portfolio-filter__item:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+
 .portfolio-filter__btn {
   font-family: inherit;
   cursor: pointer;
@@ -187,7 +193,6 @@ body {
 @media screen and (min-width: 768px) {
   .portfolio-grid__item {
     flex-basis: calc((100% - 30px * 2) / 2);
-    height: 440px;
   }
 }
 
@@ -269,8 +274,8 @@ body {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .portfolio-grid-bottom {
-    height: 146px;
+  .portfolio-grid-bottom-padding-bottom {
+    padding-bottom: 56px;
   }
 }
 
@@ -366,6 +371,10 @@ body {
 }
 
 .site-nav__link:hover, .site-nav__link:focus {
+  color: var(--accent-color);
+}
+
+.site-nav__link--current {
   color: var(--accent-color);
 }
 
@@ -576,6 +585,7 @@ body {
 
 .mobile-menu-social {
   display: flex;
+  flex-wrap: wrap;
   position: absolute;
   bottom: 55px;
 }
@@ -992,6 +1002,8 @@ body {
   left: 50%;
   opacity: 1;
   width: 450px;
+  padding-left: 40px;
+  padding-right: 40px;
   transform: translate(-50%, -50%) scale(1);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1038,6 +1050,7 @@ body {
 }
 
 .modal__lable {
+  font-weight: bold;
   margin-top: 40px;
   margin-bottom: 12px;
   font-size: 20px;
@@ -1061,9 +1074,9 @@ body {
   margin-right: auto;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 479px) {
   .modal-form {
-    width: calc(100% - 40px);
+    width: 100%;
   }
 }
 
@@ -1079,6 +1092,10 @@ body {
   margin-bottom: 10px;
   position: relative;
   color: var(--dark-color);
+}
+
+.form-field--margin-bottom {
+  margin-bottom: 0;
 }
 
 .form-field__label {
@@ -1143,6 +1160,7 @@ body {
   cursor: pointer;
   height: 120px;
   padding: 12px 16px;
+  margin-bottom: 20px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   font-size: 14px;
@@ -1169,7 +1187,6 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--font-color-dark);
-  margin-top: 20px;
   margin-bottom: 30px;
 }
 
@@ -1274,6 +1291,12 @@ body {
   }
 }
 
+@media screen and (max-width: 767.98px) {
+  .footer-adress-container {
+    margin-bottom: 60px;
+  }
+}
+
 .footer-logo {
   display: inline-block;
   text-decoration: none;
@@ -1316,7 +1339,6 @@ body {
 }
 
 .footer-social {
-  margin-top: 60px;
   margin-bottom: 60px;
 }
 
