--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -22,6 +22,9 @@
 
   &__item:not(:last-child) {
     margin-right: 8px;
+    @media screen and (max-width: 767.98px) {
+      margin-bottom: 15px;
+    }
   }
 }
 .portfolio-filter__btn {
@@ -65,7 +68,6 @@
   margin-top: 30px;
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 30px * 2) / 2);
-    height: 440px;
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 30px * 3) / 3);
@@ -128,8 +130,10 @@
   border-right: 1px solid var(--card-border-color);
   border-left: 1px solid var(--card-border-color);
   border-bottom: 1px solid var(--card-border-color);
-  @media screen and(min-width: 768px) and (max-width: 1199px) {
-    height: 146px;
+}
+@media screen and(min-width: 768px) and (max-width: 1199px) {
+  .portfolio-grid-bottom-padding-bottom {
+    padding-bottom: 56px;
   }
 }
 .portfolio-grid-bottom__lable {
