--- a/sass/layouts/_mobile-menu.scss
+++ b/sass/layouts/_mobile-menu.scss
@@ -3,7 +3,7 @@
     position: fixed;
     display: flex;
     justify-content: flex-end;
-    right: 23px;
+    right: 10%;
     top: 22px;
     z-index: 556;
     width: 40px;
@@ -83,6 +83,9 @@
   &:focus {
     color: var(--accent-color);
     font-size: 34px;
+    @media screen and (max-width: 480px) {
+      font-size: 28px;
+    }
   }
 }
 .icon-close {
