--- a/sass/layouts/_mobile-menu.scss
+++ b/sass/layouts/_mobile-menu.scss
@@ -41,7 +41,7 @@
   }
 }
 .mobile-menu-container {
-  padding-left: 0;
+  padding-left: 20px;
   @media screen and (min-width: 480px) {
     margin-left: 40px;
   }
